--- a/src/style/icons.css
+++ b/src/style/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?xe553h');
-  src:  url('fonts/icomoon.eot?xe553h#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?xe553h') format('truetype'),
-    url('fonts/icomoon.woff?xe553h') format('woff'),
-    url('fonts/icomoon.svg?xe553h#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?q9af2d');
+  src:  url('fonts/icomoon.eot?q9af2d#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?q9af2d') format('truetype'),
+    url('fonts/icomoon.woff?q9af2d') format('woff'),
+    url('fonts/icomoon.svg?q9af2d#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -37,6 +37,9 @@
 
 .icon-cloud_download:before {
   content: "\e903";
+}
+.icon-menu:before {
+  content: "\e904";
 }
 .icon-send:before {
   content: "\e900";
